<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Practice Hub</string>

    <!-- Metronome -->
    <string name="metronome">Metronome</string>
    <string name="metronome_icon">Metronome Icon</string>
    <string name="metronome_start">&#x25B6;</string>
    <string name="metronome_stop">&#x25FC;</string>
    <string name="metronome_tempo">Tempo</string>
    <string name="metronome_tap_tempo">Tap Tempo</string>
    <string name="metronome_beats_on">Beats On</string>
    <string name="metronome_beats_off">Beats Off</string>

    <!-- Tuner -->
    <string name="tuner_on">Tuner On</string>
    <string name="tuner_off">Tuner Off</string>
    <string name="neg_50_cents">-50 cents</string>
    <string name="pos_50_cents">+50 cents</string>
    <string name="calculating">calculating&#8230;</string>
    <string name="turn_off_everything">Turn Off Metronome and Tuner</string>
    
    <!-- Drone -->
    <string name="drone">Drone</string>
    <string name="note_A">A</string>
    <string name="note_Bb">A#/Bb</string>
    <string name="note_B">B</string>
    <string name="note_C">C</string>
    <string name="note_Db">C#/Db</string>
    <string name="note_D">D</string>
    <string name="note_Eb">D#/Eb</string>
    <string name="note_E">E</string>
    <string name="note_F">F</string>
    <string name="note_Gb">F#/Gb</string>
    <string name="note_G">G</string>
    <string name="note_Ab">G#/Ab</string>
    <string name="turn_off_all_drones">Stop All Drones</string>

    <!-- Notification -->
    <string name="notification_stop">Stop</string>
    
    <!-- Menu -->
    <string name="menu_volume">Volume Mixer</string>
    <string name="menu_volume_done">Done</string>
    <string name="menu_stop_all">Stop All</string>
    
</resources>