<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp" >

    <ImageView
        android:id="@+id/custom_notification_icon"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_marginRight="10sp"
        android:contentDescription="@string/metronome_icon"
        android:src="@drawable/ic_launcher"/>

    <TextView
        android:id="@+id/custom_notification_title"
        style="@style/NotificationTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/custom_notification_icon"
        android:text="@string/app_name" />

    <TextView
        android:id="@+id/custom_notification_text"
        style="@style/NotificationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_notification_title"
        android:layout_toRightOf="@id/custom_notification_icon" />

    <Button
        android:id="@+id/custom_notification_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:text="@string/notification_stop" />

</RelativeLayout>